public/style/style.css
html{
 height: 100%;
 background-color: rgb(86, 83, 83);
 padding: 1.5rem;
 /* width: 100%; */
}
header{
 background-color: black;
 color: white;
 display: flex;
 justify-content: space-between;
 padding: 0rem 0.5rem;
 text-align: center;
 display: flex;
 justify-content: center;
 align-items: center;
}

header h2{
 background-color: brown;
 /* margin: 0; */
 padding: 0.5rem;
 /* height: 1rem; */
 /* border-radius: 20px; */
 color: black;
 text-align: center;
}

header ul{
 display: flex;
 margin: 1.5rem 0;
 list-style: none;
 justify-content: space-between;
 gap: 1.5rem;
 margin-left: 4rem;
}

header ul a{
 text-decoration: none;
 color: white;
}

header h2 a{
   text-decoration: none;
   color: white;
  }

header ul li{
 margin: 0rem;
 padding: 0rem;
 font-size: 1.5rem;
 }

 header ul li:hover{
 padding: 0.2rem;
 background-color: brown;
 border-radius: 15px;
 }

 /* header form button{

 } */
 header input{
 height: 1.5rem;
 margin: 1.8rem 0;
 width: 15rem;
 border-radius: 10px;
 border: none;
 background-color: rgb(184, 184, 184);
 color: rgb(138, 24, 24);
 padding: 3px;
 font-size: 1rem;
 margin-right: 10rem;
 }


 header div{
 display: flex;
 margin: 0.5rem;
 justify-content: space-between;
gap: 10px;
 }

 header div img{
 height: 4rem;
 width: 4rem;
 /* border-radius: 2rem; */
 overflow: hidden;
 object-fit: cover;
 border: 1px outset brown;
 }

 #first-section{
 color: white;
 background-color: rgb(136, 29, 11);
 margin-top: 5rem;
 display: flex;
 height: 25rem;
 justify-content: space-between;
 }

 #first-section p{
 padding: 1rem;
 }
 #second-section p{
    padding: 1rem;
    }

 
 #text{
 width: 100%;
 text-align: center;

 }

 #text div{
    margin-top: 2rem;
 }

 #text a{
 text-decoration: none;
 padding: 1rem 1rem;
 
 background-color: rgb(30, 1, 1);
 margin-top: 2rem;
 /* color: rgb(136, 29, 11);; */
 color: inherit;
 font-weight: bold;
 }
 #text a:hover{
    background-color: black;
 }

 #first-section img{
 height: 100%;
 width: 20rem;
 object-fit: cover;
 }

 #second-section{
    color: white;
    background-color: rgb(136, 29, 11);
    margin-top: 1rem;
    display: flex;
    height: 25rem;
    justify-content: space-between;  
 }

 #second-section img{
height: 100%;
width: 20rem;
object-fit: cover;
}

footer{
 width: 100%;
 background-color: black;
 position: absolute;
 left: 0;
 right: 0;
 top: 68rem;
 /* height: 10rem; */
  /* padding: 5rem;  */
 text-align: center;
}

footer h1{
color: white;
}

footer p{
    color: white;
    }
footer div{
 padding: 2rem;
 display: flex;
 justify-content: center;
 gap: 1rem;
}

footer img{
 height: 3rem;
 width: 3rem;
 object-fit: cover;
}

